<resources>
    <string name="app_name">Привычки</string>

    <string name="habit_success_inserted_db_message">"Привычка добавлена"</string>
    <string name="registration_success_message">"Вы успешно зарегистрировались"</string>
    <string name="authentication_success_message">"Вы успешно авторизовались"</string>
    <string name="delete_from_db_success_message">"Все записи успешно удалены"</string>
    <string name="load_db_success_message">"Записи успешно загружены"</string>
    <string name="replication_success_message">"Записи успешно восстановлены из резервной копии"</string>
    <string name="insert_db_success_message">"Успешно добавлено"</string>
    <string name="backup_success_message">"Успешно создана резервная копия данных на сервере"</string>
    <string name="change_progress_db_success_message">"Данные успешно модифицированы"</string>
    <string name="log_out_success_message">"Вы вышли из аккаунта"</string>
    <string name="get_jwt_success_message">"Пользователь успешно определен"</string>

    <string name="pref_account_title">Аккаунт</string>
    <string name="pref_account_summary">Резервное копирование и восстановление данных</string>
    <string name="pref_delete_all_title">Удаление всех привычек</string>
    <string name="pref_delete_all_summary">Удаление всей информации о привычках из базы данных</string>
    <string name="title_backup_alert_dialog">Создать резервную копию данных?</string>
    <string name="message_backup_alert_dialog">Создание резервной копии данных на сервере приведет к замене предыдущей резервной копии, вы действительно хотите продолжить?</string>
    <string name="positive_backup_alert_dialog">Да</string>
    <string name="negetive_backup_alert_dialog">Нет</string>
    <string name="title_replication_alert_dialog">Выполнить восстановление данных?</string>
    <string name="message_replication_alert_dialog">Восстановление данных приведет к замене всех существующих данных, вы действительно хотите продолжить?</string>
    <string name="positive_replication_alert_dialog">Да</string>
    <string name="negative_replication_alert_dialog">Нет</string>
    <string name="title_logout_alert_dialog">Выполнить выход из аккаунта?</string>
    <string name="message_logout_alert_dialog">Для повторного входа в аккаунт потребуется снова ввести email и пароль, вы действительно хотите продолжить?</string>
    <string name="positive_logout_alert_dialog">Да</string>
    <string name="negative_logout_alert_dialog">Нет</string>
    <string name="start_subtitle_calendar">Старт</string>
    <string name="finish_subtitle_calendar">Финиш</string>
    <string name="dates_progress_fragment_text_view">"Начало: %s, дни: %d"</string>
    <string name="title_delete_all_alert_dialog">Выполнить удаление всех записей?</string>
    <string name="message_delete_all_alert_dialog">Данная операция приведет к удалению всех привычек на телефоне, вы действительно хотите продолжить?</string>
    <string name="positive_delete_all_alert_dialog">Да</string>
    <string name="negetive_delete_all_alert_dialog">Нет</string>
    <string name="no_data_text_bar_chart">Слишком мало данных для построения графика</string>
    <string name="dates_habit_item_text_view">"Начало: %s \n Дни: %d"</string>
    <string name="id_habit_item_text_view">№ %d</string>

    <string name="backup_text_button_account">Резервное копирование</string>
    <string name="replication_text_button_account">Восстановление данных</string>
    <string name="logout_text_button_account">Выход из аккаунта</string>
    <string name="title_hint_habit_edit_text">Название</string>
    <string name="description_hint_habit_edit_text">Описание</string>
    <string name="date_start_hint_habit_edit_text">Дата начала</string>
    <string name="duration_hint_habit_edit_text">Продолжительность</string>
    <string name="add_habit_hint_button">Добавить</string>
    <string name="request_auth_text_button">АВТОРИЗАЦИЯ</string>
    <string name="password_auth_hint_edit_text">Пароль</string>
    <string name="login_auth_hint_edit_text">Email</string>
    <string name="authentication_account_text_button">АВТОРИЗАЦИЯ</string>
    <string name="registration_account_text_button">РЕГИСТРАЦИЯ</string>
    <string name="title_text_text_view_statistics">Процент выполнения привычек</string>
    <string name="request_registration_text_button">РЕГИСТРАЦИЯ</string>
    <string name="password_confirmation_hint_edit_text">Подтверждение пароля</string>
    <string name="password_registration_hint_edit_text">Пароль</string>
    <string name="login_registration_hint_edit_text">Email</string>
    <string name="lastname_registration_hint_edit_text">Фамилия</string>
    <string name="firstname_registration_hint_edit_text">Имя</string>
    <string name="open_habit_title_list_item_menu">Привычки</string>
    <string name="open_statistics_title_item_menu">График</string>
    <string name="open_settings_title_item_menu">Настройки</string>
    <string name="open_account_title">Аккаунт</string>


</resources>
