<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/open_habit_list_item_menu"
        android:icon="@drawable/ic_format_list"
        android:title="@string/open_habit_title_list_item_menu"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/open_statistics_item_menu"
        android:icon="@drawable/ic_insert_chart"
        android:title="@string/open_statistics_title_item_menu"
        app:showAsAction="always" />

    <item
        android:id="@+id/open_settings_item_menu"
        android:icon="@drawable/ic_settings_applications"
        android:title="@string/open_settings_title_item_menu"
        app:showAsAction="always" />

</menu>