<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <ImageView
        android:id="@+id/icon_auth_image_view"
        android:layout_width="@dimen/icon_auth_size_image_view"
        android:layout_height="@dimen/icon_auth_size_image_view"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/icon_auth_margin_image_view"
        android:background="@drawable/ic_magnifying_glass"
        android:scaleType="centerInside"
        android:transitionName="shared_icon_auth_image_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/margin_linear_layout_authentication"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_auth_edit_text"
            style="@style/style_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_mail_outline_black"
            android:hint="@string/login_auth_hint_edit_text"
            android:importantForAutofill="no"
            android:inputType="textWebEmailAddress|textEmailAddress" />

        <EditText
            android:id="@+id/password_auth_edit_text"
            style="@style/style_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_lock_outline_black"
            android:hint="@string/password_auth_hint_edit_text"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/request_auth_button"
            style="@style/style_button_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_auth_text_button"
            android:textSize="@dimen/request_auth_text_size_button"
            android:transitionName="shared_authentication_button" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/authentication_loading_view_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="@dimen/loading_size_progress_bar_authentication"
            android:layout_height="@dimen/loading_size_progress_bar_authentication"
            android:layout_gravity="center" />
    </FrameLayout>

</FrameLayout>